// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link component renders an anchor 1`] = `
.sxbal7y {
  color: var(--colors-primary500);
  font-family: var(--fonts-sans);
  text-decoration: none;
  cursor: pointer;
}

.sxbal7y:focus,
.sxbal7y:hover {
  color: var(--colors-primary900);
  text-decoration: underline;
}

.sxbal7y:active,
.sxbal7y:visited {
  color: var(--colors-primary500);
}

.sxbal7y5dbgn--size-md {
  font-size: var(--fontSizes-md);
  line-height: 1.625;
}

<div>
  <a
    class="sxbal7y sxbal7y5dbgn--size-md"
    href="https://google.com/"
  >
    GOOGLE
  </a>
</div>
`;

exports[`Link component renders an large anchor 1`] = `
.sxbal7y {
  color: var(--colors-primary500);
  font-family: var(--fonts-sans);
  text-decoration: none;
  cursor: pointer;
}

.sxbal7y:focus,
.sxbal7y:hover {
  color: var(--colors-primary900);
  text-decoration: underline;
}

.sxbal7y:active,
.sxbal7y:visited {
  color: var(--colors-primary500);
}

.sxbal7y5dbgn--size-md {
  font-size: var(--fontSizes-md);
  line-height: 1.625;
}

.sxbal7yn3mo2--size-lg {
  font-size: var(--fontSizes-lg);
  line-height: 1.52;
}

<div>
  <a
    class="sxbal7y sxbal7yn3mo2--size-lg"
    href="https://google.com/"
  >
    GOOGLE
  </a>
</div>
`;
